<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nova_cut"
                    android:text="InternCode"
                    android:textColor="@color/grey_90"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/nova_cut"
                    android:text="X"
                    android:textColor="@color/orange_400"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/photo_female_1"
                app:civ_border="true"
                app:civ_border_color="@color/orange_400"
                app:civ_border_width="2dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/profile_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/grey_60" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/profile_tags"
                android:textColor="@color/grey_40"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <androidx.cardview.widget.CardView
                    android:id="@+id/tabMaterialDesign"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/deep_orange_200"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:contentDescription="@string/material_design_logo"
                            android:src="@drawable/ic_dashboard_white_32dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/material_design"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/tabMyProject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/deep_purple_200"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:contentDescription="@string/my_project_logo"
                            android:src="@drawable/ic_project_white_32dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/my_project"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>