<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MaterialDesignMain">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/buttonBackArrow"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/back_arrow"
                    android:src="@drawable/ic_arrow_back_24dp" />

                <TextView
                    android:id="@+id/toolbarHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"

                    android:textColor="@color/grey_700"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:overScrollMode="never"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:src="@drawable/photo_female_1"
                app:civ_border="true"
                app:civ_border_color="@color/orange_400"
                app:civ_border_width="2dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/profile_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/grey_60" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/profile_tags"
                android:textColor="@color/grey_40"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/abtus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_expand_more_blue_24dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="About us "
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/about"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:text="Inserted"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/stylbtn1"
                    android:drawableLeft="@drawable/ic_music_note_black_24dp"
                    android:text="music"
                    android:textColor="#fff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/stylbtn1"
                    android:drawableLeft="@drawable/ic_games_white_24dp"

                    android:text="music"
                    android:textColor="#fff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/stylbtn1"
                    android:drawableLeft="@drawable/ic_movie_white_24dp"

                    android:text="music"
                    android:textColor="#fff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"


                    android:background="@drawable/stylbtn1"
                    android:text="music"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Photos"
                    android:textSize="20dp"
                    android:textStyle="bold"

                    />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:spanCount="2"
                tools:itemCount="10"

                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/movie_list">


            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>